tests/NormalTests/paczka1/fuzzy1/44833741.err
Error in line 1: kVdc A241 77,60
Error in line 3: OvyZZNmeLxl A943 45,6
Error in line 6: OvyZZNmeLxl A241 82,3
Error in line 13: gTZw A646 58,5
Error in line 14: gTZw A241 13,8
Error in line 18: kVdc A241 32,1
Error in line 26: kVdc A83 4,7
Error in line 25: gTZw A83 10,6
Error in line 5: vH27kfNSCP A241 43,3
Error in line 22: Pmhya A83 79,5
Error in line 36: bXC A83 96,1
Error in line 40: bXC A646 147,18
